Now works with python3 + django 2.1.3

--- a/NetExplorer/templates/NetExplorer/about.html
+++ b/NetExplorer/templates/NetExplorer/about.html
@@ -63,7 +63,7 @@
         <li>PlanNET now holds 729,043 Schmidtea mediterranea interactions (up from 510,996).</li>
         <li>The Smed454 dataset and Newmark dataset were temporarily removed because of disk size limitations. These will be uploaded in due time.</li>
         <li>A manually curated list of identifiers for planarian transcripts was uploaded to PlanNET. Now users can search for these identifiers, which follow the form: "Smed_XXX". If a particular transcripts has a manually curated identifier, the identifier will appear in pink both in Gene Search and in the corresponding Gene Card.</li>
-        <li>New Data Downloader allows users to download sequences and sequence annotations in bulk. Available at <a href="{% url downloads %}" title="Downloads">downloads page</a>.</li>
+        <li>New Data Downloader allows users to download sequences and sequence annotations in bulk. Available at <a href="{% url 'downloads' %}" title="Downloads">downloads page</a>.</li>
         <li>Many quality of life improvements to the overall design of the website, including a search bar in NetExplorer.</li>
     </ul>
 
