--- a/NetExplorer/templates/NetExplorer/index.html
+++ b/NetExplorer/templates/NetExplorer/index.html
@@ -17,7 +17,7 @@
 -->
 
 <div class="update-msg">
-    <span class="glyphicon glyphicon-bullhorn"></span>&nbsp&nbsp&nbsp PlanNET has been updated to version 1.1. See <a href="{% url about %}#update-notes" title="Update notes">update notes</a>.
+    <span class="glyphicon glyphicon-bullhorn"></span>&nbsp&nbsp&nbsp PlanNET has been updated to version 1.1. See <a href="{% url 'about' %}#update-notes" title="Update notes">update notes</a>.
 </div>
 <hr>
 <div class="row row-app">
@@ -26,13 +26,13 @@
     <div class="col-sm-6">
         <div class="panel panel-info app-container" >
             <div class="panel-body app-panel" >
-                <a title="Go to Gene Search" href="{% url gene_search %}">
+                <a title="Go to Gene Search" href="{% url 'gene_search' %}">
                     <div class="app-btn">
                         <img class="app-icon" src="{% static 'Images/gene-finder-icon.png' %}"/>
                     </div>
                 </a>
                 <p>Search for genes and contigs using identifiers.</p>
-                <a href="{% url tutorial %}#genesearch" data-toggle="tooltip" data-placement="top" title="Go to Tutorial">
+                <a href="{% url 'tutorial' %}#genesearch" data-toggle="tooltip" data-placement="top" title="Go to Tutorial">
                     <span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span>
                 </a>
             </div>
@@ -43,13 +43,13 @@
     <div class="col-sm-6">
             <div class="panel panel-success app-container" >
                 <div class="panel-body app-panel">
-                    <a title="Go to Net Explorer" href="{% url net_explorer %}">
+                    <a title="Go to Net Explorer" href="{% url 'net_explorer' %}">
                         <div class="app-btn">
                             <img class="app-icon" src="{% static 'Images/network-icon.png' %}"/>
                         </div>
                     </a>
                     <p>Explore the predicted protein-protein interactions network.</p>
-                    <a href="{% url tutorial %}#netexplorer" data-toggle="tooltip" data-placement="top" title="Go to Tutorial">
+                    <a href="{% url 'tutorial' %}#netexplorer" data-toggle="tooltip" data-placement="top" title="Go to Tutorial">
                         <span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span>
                     </a>
                 </div>
@@ -66,13 +66,13 @@
     <div class="col-sm-4">
         <div class="panel panel-blast app-container" >
             <div class="panel-body app-panel">
-                <a title="Go to BLAST" href="{% url blast %}">
+                <a title="Go to BLAST" href="{% url 'blast' %}">
                     <div class="app-btn">
                         <img class="app-icon" src="{% static 'Images/blast-icon.png' %}"/>
                     </div>
                 </a>
                 <p>BLAST the different planarian transcriptomes.</p>
-                <a href="{% url tutorial %}#blast" data-toggle="tooltip" data-placement="top" title="Go to Tutorial">
+                <a href="{% url 'tutorial' %}#blast" data-toggle="tooltip" data-placement="top" title="Go to Tutorial">
                    <span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span>
                 </a>
             </div>
@@ -84,13 +84,13 @@
         
             <div class="panel panel-warning app-container" >
                 <div class="panel-body app-panel">
-                    <a title="Go to Pathway Finder" href="{% url path_finder %}">
+                    <a title="Go to Pathway Finder" href="{% url 'path_finder' %}">
                         <div class="app-btn">
                             <img class="app-icon" src="{% static 'Images/pathway-icon.png' %}"/>
                         </div>
                     </a>
                     <p>Look for pathways in the different interaction networks.</p>
-                    <a href="{% url tutorial %}#pathwayfinder" data-toggle="tooltip" data-placement="top" title="Go to Tutorial">
+                    <a href="{% url 'tutorial' %}#pathwayfinder" data-toggle="tooltip" data-placement="top" title="Go to Tutorial">
                         <span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span>
                     </a>
                 </div>
@@ -101,13 +101,13 @@
     <div class="col-sm-4">
             <div class="panel panel-planexp app-container" >
                 <div class="panel-body app-panel">
-                    <a title="Go to PlanExp"  href="{% url planexp %}">
+                    <a title="Go to PlanExp"  href="{% url 'planexp' %}">
                         <div class="app-btn">
                             <img class="app-icon" src="{% static 'Images/planexp-icon.png' %}"/>
                         </div>
                     </a>
                     <p>Explore RNA-seq and SingleCell expression experiments.</p>
-                    <a href="{% url tutorial %}#planexp" data-toggle="tooltip" data-placement="top" title="Go to Tutorial">
+                    <a href="{% url 'tutorial' %}#planexp" data-toggle="tooltip" data-placement="top" title="Go to Tutorial">
                         <span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span>
                     </a>
                 </div>
