--- a/NetExplorer/templates/NetExplorer/pathway_finder.html
+++ b/NetExplorer/templates/NetExplorer/pathway_finder.html
@@ -149,7 +149,7 @@
                                     </div>
                                     <div class="col-md-6">
                                         <a href="#" class="info-tooltip" title="View on NetExplorer">
-                                            <form method="POST" action="{% url net_explorer %}" target="_blank"> {% csrf_token %}
+                                            <form method="POST" action="{% url 'net_explorer' %}" target="_blank"> {% csrf_token %}
                                                 <input type="hidden" name="json_text" value='{{ path.0|safe }}' />
                                                 <button id="netexplorer-mini-{{ forloop.counter }}" class="btn btn-default netexplorer-view" type="submit">
                                                     <img src="{% static 'Images/netexplorer-mini.png' %}" class="netexplorer-mini"/>
@@ -219,15 +219,15 @@
         <div id="pfind-form">
             <div class="user-in-controls">
                 {% if user.is_authenticated %}
-                    <a href="{% url account %}"><span class="glyphicon glyphicon-user"></span> {{ user.username }}</a>
+                    <a href="{% url 'account' %}"><span class="glyphicon glyphicon-user"></span> {{ user.username }}</a>
                 {% endif %}
             </div>
             <div id="pfind-form-header">
                 <div class="back-div">
-                    <a href="{% url index_view %}" class="info-tooltip"
+                    <a href="{% url 'index_view' %}" class="info-tooltip"
                     title="Back to PlanNET"><span class="glyphicon glyphicon-home"></span></a>
                     <hr>
-                    <a target="_blank" href="{% url tutorial %}#pathwayfinder" class="info-tooltip"
+                    <a target="_blank" href="{% url 'tutorial' %}#pathwayfinder" class="info-tooltip"
                     title="Go to Tutorial"><span class="glyphicon glyphicon-question-sign"></span></a>
                 </div>
                 <img src="{% static 'Images/pathway-icon.png' %}" class="app-icon-inside"/>
@@ -235,7 +235,7 @@
             <hr>
 
             <!-- FORM -->
-            <form method="GET" action="{% url path_finder %}">
+            <form method="GET" action="{% url 'path_finder' %}">
                 <!-- Select Database -->
                 <img class="pfind-form-icon" src="{% static 'Images/database-icon.png' %}"/>
                 <select name="database" class="selectpicker" title="Select Database">
@@ -313,6 +313,7 @@
         </div>
 
 
+        <script src="{% static 'js/root.js' %}"></script>
         <script src="{% static 'js/jquery-min.js' %}"></script>
         <script src="{% static 'js/cytoscape.js' %}"></script>
         <script src="{% static 'js/jquery_cookie.js' %}"></script>
