--- a/NetExplorer/templates/NetExplorer/datasets.html
+++ b/NetExplorer/templates/NetExplorer/datasets.html
@@ -32,7 +32,7 @@
         <div class="panel panel-default panel-transcriptome">
             <div class="panel-heading">
                 <a class="about-title" name="{{ db.name }}">
-                    <h4><img class='legend-db' src="{% static 'Images/legend-' %}{{ db.name }}.png"/>{{ db }}</h4>
+                    <h4><img class='legend-db' src="{% static 'Images/legend-' %}{{ db.name }}.png"/>{{ db.name }}</h4>
                 </a>
             </div>
             <div class="panel-body transcriptome-panel">
