--- a/NetExplorer/templates/NetExplorer/experiment_dge_table.html
+++ b/NetExplorer/templates/NetExplorer/experiment_dge_table.html
@@ -19,7 +19,7 @@
                         <a class="card-trigger"
                             title="Click to view info card"
                             target="{{ exp.gene_symbol }}"
-                            targetDB="{{ database }}">
+                            targetDB="{{ database.name }}">
                             {{ exp.gene_symbol }}
                         </a>
                     </td>
@@ -34,6 +34,7 @@
 
     </table>
 
+    <script src="{% static 'js/root.js' %}"></script>
     <script>
         $(document).ready(function(){
             $("#dge-table").DataTable({"order": [[ 3, "desc" ]]});
