--- a/static/css/style.css
+++ b/static/css/style.css
@@ -50,14 +50,24 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .company-logo {
-    width: 60%;
+    width: 50%;
     display: inline-block;
     margin-bottom: 5px;
     margin-top: 5px;
+    opacity: 0.70;
+}
+
+.bg-official {
+    padding-left: 4px;
+    padding-right: 4px;
+    padding-top: 4px;
+    padding-bottom: 4px;
+    background-color: #c45ca2;
+    color: white;
 }
 
 .company-logo:hover {
-    opacity: 0.5;
+    opacity: 1;
 }
 
 .company-logo-container-parent {
@@ -69,7 +79,19 @@ h1, h2, h3, h4, h5, h6 {
 
 .company-logo-container {
     margin: auto 5px;
-    margin-top: 50px;
+    margin-top: 25px;
+}
+
+
+@media only screen and (max-width: 870px) {
+    .company-logo-container-parent {
+        display: none;
+    }
+
+    #logoheader {
+        height: 120px !important;
+    }
+
 }
 
 .social-icon {
@@ -91,7 +113,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 #logoheader {
-    height: 220px;
+    height: 166px;
     margin-top: 1%;
 }
 
@@ -102,6 +124,27 @@ h1, h2, h3, h4, h5, h6 {
 .navbar {
     margin-top: 0 !important;
 }
+
+
+.navbar-plannet{ 
+    background-color: white !important;
+}
+
+
+.navbar-plannet .navbar-nav>li>a {
+    color: #AAA;
+}
+.navbar-plannet .navbar-nav>li.active>a {
+    color: #444
+}
+.navbar-plannet { 
+    border: 1px solid #EBEBEB !important;
+    font-size: 16px;
+
+
+}
+
+
 
 /* PANELS */
 
@@ -118,25 +161,52 @@ h1, h2, h3, h4, h5, h6 {
 .app-container {
     text-align: center;
     float: left;
-    height: 300;
+    height: 300px;
     width: 100%;
+    background-color: #f4f4f4 !important;
+    border: solid 0px !important;
 }
 
 
-.app-button {
-    position:relative;
-    display: block;
-    margin: 0 auto;
-    margin-top: 4%;
-    margin-left: 2%;
-    width: 85px;
+
+.app-container .glyphicon-info-sign {
+    font-size: 20px;
+    cursor: pointer;
+}
+
+.app-btn:hover {
+    background-color: #eee !important;
+}
+.app-btn:hover ~ .app-icon {
+    opacity: 0.85;
+}
+.app-btn {
+    border: solid 2px #EBEBEB;
+    margin-bottom: 25px;
+    background-color: white !important;
+}
+
+.app-btn:active {
+    background-color: #e6e6e6;
+    border-color: #adadad;
+}
+
+.app-btn:focus {
+    background-color: #e6e6e6;
+    border-color: #8c8c8c;
+}
+
+.app-btn:hover {
+    background-color: #e6e6e6;
+    border-color: #adadad;
 }
 
 .app-icon {
-    margin-top: 7%;
-    margin-bottom: 5%;
-    width: 180;
+    margin-top: 25px;
+    margin-bottom: 15px;
+    width: 150;
 }
+
 
 .app-icon-inside {
     position: relative;
@@ -146,13 +216,21 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .panel-blast {
-    border-color: #e7ccf6 !important;
     border-style: solid !important;
 }
 
 .panel-blast .panel-heading {
     background-color: #edd9f8 !important;
     border-color: #e7ccf6 !important;
+}
+
+.panel-planexp {
+    border-style: solid !important;
+}
+
+.panel-planexp .panel-heading {
+    background-color: #FDD4D4;
+    border-color: #FDD4D4;
 }
 
 .btn-blast:hover {
@@ -187,6 +265,10 @@ h1, h2, h3, h4, h5, h6 {
 .tutorial-icon-link {
     color: #777777;
 }
+
+.molecular_function { background-color: #D5A0E4; padding: 2px; color:white; }
+.cellular_component { background-color: #9DB9E6; padding: 2px; color:white; }
+.biological_process { background-color: #D7A070; padding: 2px; color:white; }
 
 .tutorial-icon-link:hover {
     color: #777777;
@@ -280,23 +362,24 @@ h1, h2, h3, h4, h5, h6 {
 .card-overlay {
     display: none;
     height: 90%;
-    width: 64%;
+    width: 54%;
     position: fixed;
     text-align: left;
     top: 30px;
-    right: 18%;
+    right: 28%;
     z-index: 80;
     background: white;
-    padding-left: 5%;
-    padding-top: 5%;
-    padding-right: 5%;
-    padding-bottom: 5%;
+    padding-left: 80px;
+    padding-top: 40px;
+    padding-right: 80px;
+    padding-bottom: 40px;
     overflow: scroll;
     overflow-y: scroll;
     -webkit-box-shadow: 0px 0px 180px 120px rgba(0,0,0,0.75);
     -moz-box-shadow: 0px 0px 180px 120px rgba(0,0,0,0.75);
     box-shadow: 0px 0px 180px 120px rgba(0,0,0,0.75);
     color: #777777;
+    font-size: 12px;
 }
 
 .close-overlay, #click {
@@ -304,10 +387,15 @@ h1, h2, h3, h4, h5, h6 {
     pointer;
 }
 
+
+.card-overlay h1 { font-size: 28px; }
+.card-overlay h2 { font-size: 22px; }
+.card-overlay h3 { font-size: 20px; }
+
 #button-container {
     position: fixed;
     top: 30px;
-    right: 18%;
+    right: 28%;
     z-index: 100;
     background-color: #D9EDF7;
     -webkit-box-shadow: 10px 0px 27px 0px rgba(0,0,0,0.15);
@@ -332,7 +420,7 @@ h1, h2, h3, h4, h5, h6 {
 
 .gene-ontology-div {
     overflow-y: scroll;
-    height: 20%;
+    height: 40%;
 }
 
 .full-screen-card {
@@ -389,18 +477,16 @@ h1, h2, h3, h4, h5, h6 {
     text-align: center;
     background-color: #D9EDF7;
     width: 100%;
-    height: 8%;
-    min-height: 65px;
+    height: 45px;
     display: table;
 }
 
 .card-subtitle {
     text-align: center;
-    background-color: #F7F7F7;
+    background-color: white;
     margin-left: 35%;
     width: 30%;
-    height: 6%;
-    min-height: 65px;
+    height: 45px;
     display: table;
 }
 
@@ -408,6 +494,10 @@ h1, h2, h3, h4, h5, h6 {
     color: #777777;
     font-style: normal;
 }
+
+.card-overlay .glyphicon-tag { font-size: 18px; color: #5bc0de }
+.card-overlay h2 { margin-top: 40px; }
+.h2-sep { border-color: #D9EDF7; border-width: 2px; margin-top: 0}
 
 .card-subtitle h3 {
     display: table-cell;
@@ -434,13 +524,13 @@ h1, h2, h3, h4, h5, h6 {
 .sequence-container {
     word-wrap: break-word;
     background-color: #F7F7F7;
-    padding: 5%;
+    padding: 20px;
     overflow-y: scroll;
-    max-height: 20%;
+    max-height: 150px;
 }
 
 .download-fasta {
-    width: 50px;
+    width: 25px;
 }
 
 .download-fasta-wrapper:hover {
@@ -520,13 +610,15 @@ h1, h2, h3, h4, h5, h6 {
 /* END OF BACK TO TOP */
 
 
+
+
 /* DATA TABLE */
 .int-table-container {
     color: #777777;
     font-size: 12px;
     text-align: center;
-    width: 90%;
-    margin-left: 5%;
+    width: 95%;
+    margin-left: 2.5%;
     overflow-x: scroll;
 }
 
@@ -541,9 +633,11 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .int-table-class {
-    font-size: 12px;
+    font-size: 10px;
     color: #777777;
 }
+
+.int-table-class td { font-size: 12px; }
 
 .dataTables_filter label {
     color: #777777;
@@ -585,6 +679,15 @@ h1, h2, h3, h4, h5, h6 {
     height: 100%;
     width: 75%;
     float: left;
+}
+
+@media only screen and (max-width: 1220px) {
+    #cyt {
+        width: 60%;
+    }
+    #cyt-controls {
+        width: 40% !important;
+    }
 }
 
 #loading {
@@ -767,7 +870,7 @@ h1, h2, h3, h4, h5, h6 {
 
 #add-node-container {
     width: 60%;
-    margin-top: 10%;
+    margin-top: 5%;
     margin-left: 20%;
 }
 
@@ -868,7 +971,7 @@ h1, h2, h3, h4, h5, h6 {
 
 .slider-handle {
     background-color: green !important;
-    background-image: linear-gradient(to bottom, #5CB85C, #2c682c) !important;
+    background-image: linear-gradient(to bottom, #5CB85C, #2c682c);
 }
 
 
@@ -1113,7 +1216,7 @@ input[type="file"] {
 
 #img404 {
     margin-top: 5%;
-    width: 40%;
+    width: 20%;
 }
 
 /* ABOUT */
@@ -1127,7 +1230,7 @@ input[type="file"] {
 }
 
 .about-button-container {
-    top: 100px !important;
+    top: 30px !important;
 }
 
 .about-overlay-close {
@@ -1135,10 +1238,10 @@ input[type="file"] {
 }
 
 .about-overlay {
-    width: 1000px;
-    height: 800px;
-    top: 100px;
-    right: 18%;
+    height: 90%;
+    width: 54%;
+    top: 30px;
+    right: 28%;
 }
 
 .transcriptome-table-div {
@@ -1155,6 +1258,14 @@ input[type="file"] {
 }
 .transcriptome-row .col-sm-5 { /* transcriptome table column */
     text-align: center;
+}
+
+@media only screen and (max-width: 780px) {
+    .panel-transcriptome {
+        max-height: 600px;
+        padding-top: 50px;
+    }
+
 }
 
 .img-bigger {
@@ -1177,8 +1288,8 @@ input[type="file"] {
 
 .plot-img-png {
     position: relative;
-    height: 95%;
-    width: 40%;
+    height: 100%;
+    width: 100%;
 }
 
 .view-interactome-plots:hover {
@@ -1191,9 +1302,10 @@ input[type="file"] {
 }
 
 .plot-viewer {
+    display: inline-block;
     position: relative;
-    width: 100%;
-    height: 80%;
+    width: 320px;
+    height: 320px;
 }
 
 .transcriptome-row .col-sm-7 {
@@ -1214,6 +1326,7 @@ input[type="file"] {
 }
 .transcriptome-col {
     height: 400px !important;
+    text-align: center;
 }
 
 .transcriptome-row {
@@ -1767,4 +1880,243 @@ kbd {
 .pagination>li.active>a {
   background: #f0ad4e;
   color: #fff;
+}
+
+#search-netexplorer {
+  position: fixed;
+  background-color: white;
+  text-align: center;
+  color: #777777;
+  bottom: 10px;
+  left: 30%;
+  width: 30%;
+  height: 45px;
+  line-height: 45px;
+  z-index: 10;
+
+}
+
+#genename-graph {
+    height: 40px !important;
+}
+
+#search-netexplorer-btn {
+    height: 40px !important;
+    margin-top: -5px;
+}
+
+#removesearch {
+    height: 40px !important;
+    margin-top: -5px;
+}
+
+.user-in-controls {
+    padding-right: 15px;
+    text-align: right;
+    right: 5px;
+    margin-top: 15px;
+}
+
+
+.exp-name-gradient {
+    color:  #777777;
+    margin-top: 2px;
+    margin-bottom: 2px;
+    text-align: center;
+}
+
+.update-msg {
+    margin-top: -4%;
+    text-align: center;
+}
+
+.update-notes-ul li {
+    margin-top: 10px;
+}
+
+.idtextarea {
+    max-width: 600px;
+}
+
+
+/* PLANEXP */
+.planexp-h1 {
+    font-size: 22px;
+}
+
+.planexp-rule {
+    border-width: 4px;
+    border-color: #FDD4D4;
+    margin-top: 8px;
+}
+
+.planexp-card {
+    border: 4px solid #f4f4f4;
+    padding: 22px;
+}
+
+#planexp-summary { display: none; }
+#planexp-citation { width: 60%; min-height: 80px; margin-bottom: 10px; }
+#planexp-description { min-height: 80px; }
+#planexp-conditions  { min-height: 80px; }
+
+#planexp-experiment-type { 
+    display: inline-block;
+    text-align: center;
+    width: 120px;
+    margin-left: 20px;
+    padding: 8px;
+    border-radius: 5px;
+    background-color: #f4f4f4;
+}
+
+/*
+#RNA-Seq { display: none; }
+#Single-Cell { display: none; }
+*/
+
+.cond-type {
+    display: inline-block;
+    font-weight: bold;
+    background-color:  #f4f4f4;
+    width: auto;
+    padding: 4px;
+    margin-left: 10px;
+    margin-bottom: 10px;
+}
+.cond-name {
+    display: block;
+    margin-left: 20px;
+    margin-bottom: 10px;
+}
+
+#planexp-dge-table           { display: none; }
+#planexp-dge-table-container { display: none; }
+
+.planexp-condition-selects { text-align: center; }
+
+#dge-table {
+    color: #777777;
+    font-size: 12px;
+}
+
+#select-dataset { display: none; }
+#planexp-gene-expression { display: none; }
+.gene-expression-search-container { width: 50%; }
+#plot-container { 
+    width: 100%; 
+    margin-top: 50px;
+    text-align: center; 
+}
+#expression-plot { 
+    display: inline-block; 
+    height: 500px; 
+    min-width: 700px; 
+    background-color: #f4f4f4; 
+}
+
+#tsne-plot {
+    display: inline-block; 
+    height: 500px; 
+    min-width: 700px; 
+    background-color: #f4f4f4; 
+}
+
+#plot-genenotfound { 
+    display: none; 
+    margin: auto;
+    font-size: 18px;
+    padding: 8px;
+    width: 700px; 
+    background-color: #FDD4D4;
+}
+
+#tsneplot-genenotfound {
+    display: none; 
+    margin: auto;
+    font-size: 18px;
+    padding: 8px;
+    width: 700px; 
+    background-color: #FDD4D4;  
+}
+
+#dge-table-notfound {
+    display: none; 
+    margin: auto;
+    font-size: 18px;
+    padding: 8px;
+    width: 700px; 
+    background-color: #FDD4D4;  
+}
+
+#expression-plot-loading {
+    display: none;
+    position: absolute;
+    z-index: 2;
+    left: calc(50% - 75px);
+    margin-top: 175px;
+}
+
+#tsne-plot-loading {
+    display: none;
+    position: absolute;
+    z-index: 2;
+    left: calc(50% - 75px);
+    margin-top: 175px;
+}
+
+.planexp-loading-img {
+    width: 150px;
+}
+
+.input-grp-withlabel {
+    vertical-align: bottom !important;
+}
+
+#planexp-tsne { display: none; }
+
+
+#planexp-tsne input[type=range]::-moz-range-track { 
+    background: #E7E7E7;
+}
+
+#plot-tsne-btn    { width: 125px; }
+
+#planexp-toc {
+    padding: 8px;
+    background-color: white;
+    border: 4px solid #E7E7E7;
+    width: 12%;
+    min-width: 150px;
+    min-height: 400px;
+    z-index: 2;
+}
+
+#planexp-toc.affix-top {
+    width: 100%;
+}
+
+#planexp-toc-container {
+    z-index: 2;
+    width: 12%;
+    padding:0px;
+    margin-top: calc(9% + 245px);
+}
+
+#logo-container .col-sm-8 {
+    height: 195px;
+}
+
+#logo-container .col-sm-4 {
+    height: 195px;
+}
+
+
+#planexp-summary-toc { display: none; }
+#planexp-dge-table-container-toc { display: none; }
+#planexp-gene-expression-toc     { display: none; }
+#planexp-tsne-toc { display: none; }
+
+.planexp-toc-link {
+    width: 100% !important;
 }
