--- a/NetExplorer/templates/NetExplorer/planexp.html
+++ b/NetExplorer/templates/NetExplorer/planexp.html
@@ -173,7 +173,7 @@
                 
                 <br>
                 <div id="plot-container">
-                    <div id="tsneplot-genenotfound">
+                    <div id="tsne-plot-genenotfound">
                         <span class="glyphicon glyphicon-warning-sign"></span>
                         Gene/Symbol not found
                     </div>
