--- a/NetExplorer/templates/NetExplorer/planexp.html
+++ b/NetExplorer/templates/NetExplorer/planexp.html
@@ -101,6 +101,11 @@
                 </div>
                 <div id="planexp-dge-table">
                 </div>
+
+                <div id="plot-container">
+                    <div id="volcano-plot">
+                    </div>
+                </div>
             </div> <!-- Differential expression table -->
 
             <!-- Gene Expression Plot-->
