--- a/NetExplorer/static/css/style.css
+++ b/NetExplorer/static/css/style.css
@@ -62,9 +62,19 @@ h1, h2, h3, h4, h5, h6 {
     padding-right: 4px;
     padding-top: 4px;
     padding-bottom: 4px;
-    background-color: #c45ca2;
-    color: white;
+    color: #c45ca2;
+    font-weight: bolder;
 }
+
+.bg-homolog {
+    padding-left: 4px;
+    padding-right: 4px;
+    padding-top: 4px;
+    padding-bottom: 4px;
+    color: #6785d0;
+    font-weight: bolder;
+}
+
 
 .company-logo:hover {
     opacity: 1;
