--- a/NetExplorer/templates/NetExplorer/human_card.html
+++ b/NetExplorer/templates/NetExplorer/human_card.html
@@ -109,7 +109,7 @@
             targetDB    : $(this).attr("targetDB"),
             csrfmiddlewaretoken: '{{ csrf_token }}'
         }
-        var new_url = '{% url 'index_view' %}gene_card/' + card_data.targetDB + "/" + card_data.target;
+        var new_url = window.location.href;
         history.pushState(card_data, null, new_url);
         
         // Load Get request html on current card-overlay
