Planexp shown only when user is authenticated.

--- a/NetExplorer/templates/NetExplorer/index.html
+++ b/NetExplorer/templates/NetExplorer/index.html
@@ -62,6 +62,9 @@
 
 <div class="row row-app">
 
+    {% if not user.is_authenticated %}
+        <div class="col-sm-2"> </div>
+    {% endif %}
     <!-- BLAST -->
     <div class="col-sm-4">
         <div class="panel panel-blast app-container" >
@@ -98,7 +101,8 @@
         </div>
 
     <!-- PlanEXP -->
-    <div class="col-sm-4">
+    {% if user.is_authenticated %}
+        <div class="col-sm-4">
             <div class="panel panel-planexp app-container" >
                 <div class="panel-body app-panel">
                     <a title="Go to PlanExp"  href="{% url 'planexp' %}">
@@ -113,7 +117,9 @@
                 </div>
             </div>
         </div>
-
+    {% else %}
+        <div class="col-sm-2"> </div>
+    {% endif %}
 
 </div>
 
