--- a/NetExplorer/templates/NetExplorer/smesgene_card.html
+++ b/NetExplorer/templates/NetExplorer/smesgene_card.html
@@ -9,7 +9,7 @@
         <h3>
             <a target="_blank" title="Information about the dataset" href="{% url 'datasets' %}#{{ node.database }}">
                 <img class='legend-db' src="{% static 'Images/' %}legend-{{ node.database }}.png"/>
-                SmesGene
+                <span id="card-database">SmesGene</span>
             </a>
         </h3>
     </div>
