--- a/NetExplorer/static/css/style.css
+++ b/NetExplorer/static/css/style.css
@@ -62,9 +62,23 @@ h1, h2, h3, h4, h5, h6 {
     padding-right: 4px;
     padding-top: 4px;
     padding-bottom: 4px;
+    background-color: #c45ca2;
+    color: white;
+    font-weight: bolder;
+    border-radius: 4px;
+}
+
+
+.bg-official-light {
+    padding-left: 4px;
+    padding-right: 4px;
+    padding-top: 4px;
+    padding-bottom: 4px;
     color: #c45ca2;
+    font-size: 18px;
     font-weight: bolder;
 }
+
 
 .bg-homolog {
     padding-left: 4px;
@@ -269,9 +283,13 @@ h1, h2, h3, h4, h5, h6 {
     overflow: hidden;
     cursor: pointer;
     width: 70%;
-    margin: 5%;
+    margin-top: 25px;
+    margin-bottom: 25px !important;
+    border-width: 4px !important;
+    color:#31708f;
 }
 
+.small-searchpanel .panel-body { background-color: white; }
 .tutorial-icon-link {
     color: #777777;
 }
@@ -2156,3 +2174,5 @@ kbd {
 .human-select { background-color: #6785d0 !important; }
 .gene-select { background-color: #c45ca2 !important; }
 .jbrowser-subtitle { float:right; }
+
+.panel-genesearch { background-color: #d9edf7 !important ; }
