--- a/NetExplorer/templates/NetExplorer/netexplorer.html
+++ b/NetExplorer/templates/NetExplorer/netexplorer.html
@@ -352,7 +352,7 @@
                     </form>
                 </div>
             </div>
-            <div id="node-not-found"><div class="panel panel-danger"><div class="panel-heading node-not-found-err"> </div></div></div>
+            <div id="node-not-found" style="display: none;"><div class="panel panel-danger"><div class="panel-heading node-not-found-err"> </div></div></div>
             <hr>
         <div id="layout-homologs-container">
             <!-- Layout Selection-->
